--- a/app/src/main/res/layout/item_chat_activity.xml
+++ b/app/src/main/res/layout/item_chat_activity.xml
@@ -50,5 +50,67 @@
     </LinearLayout>
 
 
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/container2"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_nickname2"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:padding="5dp"
+                android:text="11111"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="22222222222222222"
+                android:id="@+id/tv_time2"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="239dp"
+            android:layout_height="98dp"
+            android:background="@drawable/round_chat"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="20dp"
+                android:id="@+id/tv_chat2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:text="견적요청!  15kg 1166000원"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
+
+            <Button
+                android:id="@+id/btn_chat2"
+                android:text="견적상세"
+                android:textSize="18sp"
+                android:textColor="#ffffff"
+                android:background="@drawable/round_chatbtn"
+                android:layout_width="220dp"
+                android:layout_height="41dp"
+                android:layout_marginLeft="7dp" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+
 
 </LinearLayout>
