--- a/app/src/main/res/layout/activity_popup_save.xml
+++ b/app/src/main/res/layout/activity_popup_save.xml
@@ -61,7 +61,7 @@
             android:onClick="mOnClose"/>
 
         <EditText
-            android:id="@+id/editTextTextPersonName"
+            android:id="@+id/et_ai_sub"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
