--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -352,6 +352,15 @@
             app:layout_constraintEnd_toEndOf="@+id/view_home_10"
             app:layout_constraintStart_toStartOf="@+id/view_home_10"
             app:layout_constraintTop_toTopOf="@+id/view_home_10" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="AI견적"
+            android:textSize="20sp"
+            tools:layout_editor_absoluteX="234dp"
+            tools:layout_editor_absoluteY="84dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
@@ -421,5 +430,61 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="셀프견적"
+        android:textSize="20sp"
+        tools:layout_editor_absoluteX="254dp"
+        tools:layout_editor_absoluteY="602dp" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="15sp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="40dp"
+        android:clickable="true"
+        android:src="@drawable/floating1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:backgroundTint="#CECECE"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="90dp"
+        android:backgroundTint="#CECECE"
+        android:clickable="true"
+        android:src="@drawable/floating1"
+        android:visibility="visible"
+        app:elevation="6dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:pressedTranslationZ="12dp"
+        app:fabSize="mini"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="150dp"
+        android:backgroundTint="#CECECE"
+        android:clickable="true"
+        android:src="@drawable/floating1"
+        android:visibility="visible"
+        app:elevation="6dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:pressedTranslationZ="12dp"
+        app:fabSize="mini"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
